--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,78 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+  margin: 0;
+}
+
 body {
   font-family: 'Rubik Mono One', sans-serif;
 }
+
+header {
+  position: fixed;
+  top: 24px;
+  left: calc(100% - 180px);
+  width: 100%;
+  z-index: 500;
+}
+
+li{
+  display: inline-block;
+  text-align: center;
+  list-style: none;
+  height: 32px;
+  width: 32px;
+  line-height: 32px;
+  background-color: white;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+}
+
+a {
+  color:black;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.box {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.first{
+  background-color: rgb(248,2,4);
+}
+
+.second {
+  background-color: rgb(32,128,0);
+}
+
+.third {
+  background-color: rgb(255,253,0);
+}
+
+
+p {
+  font-size: 64px;
+}
+
+.texto, .texts {
+  color: rgb(255,253,0);
+}
+
+.textt {
+  color: rgb(32,128,0);
+}
+
+
+.shoes {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
