--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ li{
   border: 1px solid lightgray;
 }
 
+li:hover {
+  box-shadow: 3px 3px rgba(0, 0, 0, .5);
+}
+
 a {
   color:black;
   text-decoration: none;
@@ -41,9 +45,8 @@ a {
 
 .box {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-
 }
 
 .first{
@@ -79,3 +82,9 @@ p {
   transform: translate(-50%, -50%);
 }
 
+section::before{
+  content: '';
+  display: block;
+  height: 70px;
+  margin: -70px 0 0;
+}
