--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 html {
   scroll-behavior: smooth;
-  margin: 0;
 }
 
 body {
@@ -14,6 +13,7 @@ body {
 }
 
 header {
+  height: 32px;
   position: fixed;
   top: 24px;
   left: calc(100% - 180px);
@@ -43,7 +43,7 @@ a {
   font-size: 16px;
 }
 
-.box {
+section .box {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -82,9 +82,9 @@ p {
   transform: translate(-50%, -50%);
 }
 
-section::before{
-  content: '';
+section::before {
+  content: "";
   display: block;
-  height: 70px;
-  margin: -70px 0 0;
+  height: 32px;
+  margin: -32px 0 0; 
 }
