--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ section .box {
 /* text under the image */
 p {
   text-align: center;
-  font-size: 64px;
+  font-size: 3vw;
 }
 
 .texto, .texts {
